added post stroke aphasia paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,3 +31,18 @@ selected={true},
 abbr={HRI}
 }
 
+@article{key,
+  author = {Dekhtyar, Maria 
+  and Ross, Katrina
+  and Maura, Camila
+  and Zisser, Mackenzie
+  and Haley, Andreana
+  and Beevers, Christopher
+  },
+  journal = {(Manuscript under review)},
+  number = {},
+  title = {Survey of Mental Health Care for People with Post-Stroke Aphasia: Mixed-Methods Analysis},
+  volume = {},
+  year = {2024},
+  selected = {true}
+}
